[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/room_outline_32x32.png" type="Texture" id=1]
[ext_resource path="res://scenes/RoomBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/room_floor_32x32.png" type="Texture" id=3]
[ext_resource path="res://sprites/room_weapons_overlay_32x32.png" type="Texture" id=4]
[ext_resource path="res://scenes/rooms/WeaponsRoom.gd" type="Script" id=5]
[ext_resource path="res://scenes/gui/CircularTimedProgress.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.0042, 16.553 )

[node name="WeaponsRoom" instance=ExtResource( 2 )]
script = ExtResource( 5 )
RoomId = "Weapons"
Damage = 10

[node name="RoomUnderlying" parent="." index="0"]
texture = ExtResource( 3 )

[node name="RoomOverlying" parent="." index="1"]
texture = ExtResource( 4 )

[node name="RoomOutline-maybe-shader" parent="." index="2"]
texture = ExtResource( 1 )

[node name="FirePosition" type="Position2D" parent="." index="3"]
position = Vector2( -0.0705643, -15.8774 )

[node name="CollisionShape2D" parent="RoomHover" index="0"]
shape = SubResource( 1 )

[node name="CircularTimedProgress" parent="." index="5" instance=ExtResource( 6 )]
visible = false
margin_left = -6.0
margin_top = -6.0
margin_right = 34.0
margin_bottom = 34.0
mouse_filter = 2
TimeToRefresh = 10

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer" index="0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 403.0
margin_bottom = 197.0
mouse_filter = 2

[node name="Button" type="Button" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer" index="0"]
margin_left = 178.0
margin_top = 83.0
margin_right = 214.0
margin_bottom = 103.0
text = "Fire"
[connection signal="pressed" from="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer/Button" to="." method="_on_activation_button_pressed"]
